--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,9 @@
 /* TODO Add site wide styles */
-
-.sidebar-content__right {
-  /* position: fixed;
-  align-items: center; */
+.sidebar__ticker-portfolio {
+  display: flex;
+  justify-content: space-between;
 }
 
-main{
-}
-
-.nav {
-  top: 0;
-  position: fixed;
-  overflow: hidden;
+.link-stocks {
+  text-decoration: none;
 }
